--- a/my_site/main_hd/templates/main_hd/Reviews.html
+++ b/my_site/main_hd/templates/main_hd/Reviews.html
@@ -15,7 +15,7 @@
                         <input type="text" name="name" class="reviews__form-input" placeholder="Ім'я">
                         <input type="text" name="email" class="reviews__form-input" placeholder="E-Mail">
                         <input type="text" name="ip" id="ip_input" placeholder="IP" value="{{ ip }}" class="reviews__form-input">
-                        <button type="submit" class="reviews__form-input-submit">Опублікувати</button>
+                        <button type="submit" class="reviews__form-input-submit">Publish</button>
                     </form>
                 {% endif %}
             </div>
