--- a/my_site/main_hd/templates/main_hd/layout.html
+++ b/my_site/main_hd/templates/main_hd/layout.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -33,10 +32,10 @@
                     </div>
                     <nav class="header__menu">
                         <ul class="header__items">
-                            <li class="header-item header-main"><a href="{% url 'home' %}">Головна</a></li>
-                            <li class="header-item header-note"><a href="{% url 'singup' %}">Записатися</a></li>
-                            <li class="header-item header-aboutus"><a href="{% url 'reviews' %}">Відгуки</a></li>
-                            <li class="header-item header-item-services"><a href="{% url 'ourservices' %}">Наші послуги</a></li>
+                            <li class="header-item header-main"><a href="{% url 'home' %}">Home</a></li>
+                            <li class="header-item header-note"><a href="{% url 'singup' %}">Book an Appointment</a></li>
+                            <li class="header-item header-aboutus"><a href="{% url 'reviews' %}">Reviews</a></li>
+                            <li class="header-item header-item-services"><a href="{% url 'ourservices' %}">Our Services</a></li>
                         </ul>
                     </nav>
                 </div>
