--- a/my_site/main_hd/templates/main_hd/SingUp.html
+++ b/my_site/main_hd/templates/main_hd/SingUp.html
@@ -3,13 +3,13 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
-    <div class="singup-main__section">
-        <div class="singup-main__section-content">
-            <div class="singup-main__section-items">
-                <h1 class="singup-main__section-h1">Всі записи проходять в телеграм боті</h1>
-                <a href="https://t.me/hairdresserBydgoszczbot" class="singup-main__section-button_link">
-                    <div class="singup-main__section-button button_styles">
-                        <p class="singup-main__section__button-text">Перейти до телеграм бота</p>
+    <div class="signup-main__section">
+        <div class="signup-main__section-content">
+            <div class="signup-main__section-items">
+                <h1 class="signup-main__section-h1">All appointments are made through the Telegram bot</h1>
+                <a href="https://t.me/hairdresserBydgoszczbot" class="signup-main__section-button_link">
+                    <div class="signup-main__section-button button_styles">
+                        <p class="signup-main__section__button-text">Go to Telegram bot</p>
                     </div>
                 </a>
             </div>
